--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "com.appodeal.appodeal-unity-plugin-upm": "https://github.com/appodeal/appodeal-unity-plugin-upm.git#feature/release-3.0.1",
     "com.dainty.modules.ui": "ssh://git@bitbucket.org/dainty_games/module.ui.git#1.1.2",
     "com.dainty.modules.ads": "ssh://git@bitbucket.org/dainty_games/module.ads.git#1.0.2",
+    "com.google.external-dependency-manager": "ssh://git@bitbucket.org/dainty_games/module.google.external-dependency-manager.git#1.2.169",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
